language/move-lang/tests/move_check/parser/hexstring_token_eof1.exp
error: 

   ┌── tests/move_check/parser/hexstring_token_eof1.move:3:9 ───
   │
 3 │         x"
   │         ^^ Missing closing quote (") after byte string
   │

